--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=luminaire-platform-api
+
+server.port=8080
+app.welcome.message= welcome to luminaire platform
+
+# database
+spring.datasource.url= jdbc:mysql://localhost:3307/luminaire_db
+spring.datasource.username= luminaire_user
+spring.datasource.password= luminaire_pass
+
+# JPA config
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
